# todoscreens

./: Dockerfile  README.rst  pyproject.toml  syncsign_app.py
.github/workflows/: docker-image.yml  update.yml
todoscreens/: __init__.py  __main__.py  syncsign.py  todoist.py
